IF (DEBUG_SHADERS)
	find_path(RENDERDOC_DIR "renderdoc_app.h" REQUIRED)
	find_path(RENDERDOC_HEADERS "renderdoc_app.h" REQUIRED PATHS ${RENDERDOC_DIR} NO_CACHE)
ENDIF()

add_library(framework framework.h framework.cpp)
target_include_directories(framework PRIVATE ${RENDERDOC_HEADERS} Vulkan::Headers PUBLIC ../framework )
target_link_libraries(framework Vulkan::Vulkan)
target_link_libraries(framework glm)
target_link_libraries(framework global_compile_features)